added classes output
