# docs/swagger.json
@@ -41,6 +41,12 @@
         "controller.PredictionRequest": {
             "type": "object",
             "properties": {
+                "classes": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "context": {
                     "type": "array",
                     "items": {
@@ -58,10 +64,6 @@
         "controller.PredictionResponse": {
             "type": "object",
             "properties": {
-                "extra_data": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
                 "prediction": {
                     "type": "number"
                 }
